# htms-rs

./: .gitignore  Cargo.toml  changelog.md  cliff.toml  readme.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: changelog.yml  ci.yml  publish.yml  tests.yml
crates/core/: Cargo.toml  readme.md
crates/core/src/: axum.rs  lib.rs  render.rs  task.rs  template.rs
crates/core/src/static/: htms_chunk.js  on_response.js  style.css
crates/demo/: .gitignore  Cargo.toml  readme.md
crates/demo/examples/axum/: main.rs
crates/demo/examples/axum/pages/: index.rs
crates/demo/examples/axum_with_state/: main.rs  state.rs
crates/demo/examples/axum_with_state/pages/: index.rs
crates/demo/examples/context/: main.rs
crates/demo/examples/dashboard/: main.rs
crates/demo/examples/dashboard/pages/: index.html  index.rs  style.html
crates/demo/examples/derive/: index.html  main.rs
crates/demo/examples/derive_with_context/: main.rs
crates/demo/examples/htms_macro/: main.rs
crates/demo/examples/parse_and_build_template/: index.input.html  main.rs
crates/demo/examples/template_include/: head.html  index.html  main.rs  news.html
crates/demo/src/: lib.rs
crates/derive/: .gitignore  Cargo.toml  readme.md
crates/derive/fixtures/: example.html
crates/derive/src/: derive.rs  lib.rs
crates/htms/: Cargo.toml  readme.md
crates/htms/src/: lib.rs
crates/macros/: Cargo.toml  readme.md
crates/macros/examples/: macros_htms.rs
crates/macros/src/: htms.rs  lib.rs
crates/template/: Cargo.toml  readme.md
crates/template/src/: lib.rs
