[package]
name = "htms_core"
description = "An experiment about HTM streaming"
readme = "./readme.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skarab42/htms/crates/core"
categories = ["template-engine"]
keywords = ["html", "stream"]
rust-version = "1.88"

[dependencies]
async-stream.workspace = true
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
lol_html.workspace = true
syn = { workspace = true, features = ["full"] }
thiserror.workspace = true
