[package]
name = "htms_core"
description = "Core streaming HTML engine - The foundational magic behind progressive content loading without the complexity"
repository = "https://github.com/skarab42/htms/crates/core"
readme = "./readme.md"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
axum = ["dep:axum"]

[dependencies]
async-stream.workspace = true
axum = { workspace = true, optional = true }
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
lol_html.workspace = true
syn = { workspace = true, features = ["full"] }
thiserror.workspace = true

[dev-dependencies]
http.workspace = true
tokio = { workspace = true, features = ["full"] }
