[package]
name = "htms_demo"
description = "An experiment about HTM streaming"
readme = "./readme.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skarab42/htms/crates/demo"
categories = ["template-engine"]
keywords = ["html", "stream"]
rust-version = "1.88"
exclude = [".htms/**"]

[dependencies]
axum.workspace = true
color-eyre.workspace = true
futures-util.workspace = true
htms = { workspace = true, features = ["axum"] }
tokio = { workspace = true, features = ["full"] }
