[package]
name = "htms_demo"
description = "Live examples and experimental playground - See HTMS in action with real-world scenarios and bleeding-edge experiments"
repository = "https://github.com/skarab42/htms/crates/demo"
readme = "./readme.md"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
axum.workspace = true
color-eyre.workspace = true
futures-util.workspace = true
htms = { workspace = true, features = ["axum"] }
tokio = { workspace = true, features = ["full"] }
