[package]
name = "htms_derive"
description = "Procedural macros for HTMS - Auto-magical code generation that transforms your HTML attributes into streaming superpowers"
readme = "./readme.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skarab42/htms/crates/derive"
categories = ["template-engine"]
keywords = ["html", "stream"]
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
htms_core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
thiserror.workspace = true
