[package]
name = "htms_derive"
description = "Procedural macros for HTMS - Auto-magical code generation that transforms your HTML attributes into streaming superpowers"
repository = "https://github.com/skarab42/htms/crates/derive"
readme = "./readme.md"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
htms_core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
thiserror.workspace = true
