[package]
name = "htms"
description = "An experiment about HTM streaming"
readme = "./readme.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skarab42/htms/crates/htms"
categories = ["template-engine"]
keywords = ["html", "stream"]
rust-version = "1.88"

[features]
default = []
axum = ["htms_core/axum"]

[dependencies]
htms_core.workspace = true
htms_derive.workspace = true
