[package]
name = "htms"
description = "Stream Async HTML, Stay SEO-Friendly"
repository = "https://github.com/skarab42/htms/crates/htms"
readme = "./readme.md"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
axum = ["htms_core/axum"]

[dependencies]
htms_core.workspace = true
htms_derive.workspace = true
