[package]
name = "htms_macros"
description = "An experiment about HTM streaming"
readme = "./readme.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skarab42/htms/crates/macros"
categories = ["template-engine"]
keywords = ["html", "stream"]
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
htms_core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
