[package]
name = "htms_template"
description = "An experiment about HTM streaming"
readme = "./readme.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skarab42/htms/crates/template"
categories = ["template-engine"]
keywords = ["html", "stream"]
rust-version = "1.88"

[dependencies]
